@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.1</version>
+        <version>3.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.xianyume.iwe</groupId>
@@ -32,14 +32,29 @@
             1.39.0
         </cn.dev33.sa-token-spring-boot3-starter.version>
         <com.baomidou.mybatis-plus-spring-boot3-starter.version>
-            3.5.9
+            3.5.11
         </com.baomidou.mybatis-plus-spring-boot3-starter.version>
+        <com.github.yulichang.mybatis-plus-jsqlparser.version>
+            3.5.11
+        </com.github.yulichang.mybatis-plus-jsqlparser.version>
         <com.mysql.mysql-connector-j.version>
             8.2.0
         </com.mysql.mysql-connector-j.version>
         <com.alibaba.druid.version>
             1.2.24
         </com.alibaba.druid.version>
+
+        <org.projectlombok.lombok.version>
+            1.18.38
+        </org.projectlombok.lombok.version>
+
+        <cn.hutool.hutool-all.version>
+            5.8.26
+        </cn.hutool.hutool-all.version>
+
+        <com.github.yulichang.mybatis-plus-join-boot-starter.version>
+            1.5.3
+        </com.github.yulichang.mybatis-plus-join-boot-starter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -50,12 +65,16 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>compile</scope>
+            <version>${org.projectlombok.lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/cn.dev33/sa-token-spring-boot3-starter -->
@@ -69,6 +88,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
             <version>${com.baomidou.mybatis-plus-spring-boot3-starter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
+            <version>${com.github.yulichang.mybatis-plus-jsqlparser.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
@@ -85,7 +110,17 @@
             <version>${com.alibaba.druid.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${cn.hutool.hutool-all.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.github.yulichang</groupId>
+            <artifactId>mybatis-plus-join-boot-starter</artifactId>
+            <version>${com.github.yulichang.mybatis-plus-join-boot-starter.version}</version>
+        </dependency>
 
     </dependencies>
 
@@ -113,6 +148,21 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.3</version>
+                <configuration>
+                    <argLine>
+                        -Xshare:off
+                        -XX:+EnableDynamicAgentLoading
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        -javaagent:"${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar"
+                    </argLine>
                 </configuration>
             </plugin>
 
